tests/cases/valid/feat/exe-forward-ref-import/exe-forward-ref-import-module.mld
/exe @outer() = `Outer: @inner()`
/exe @inner() = `inner`
/export { @outer }
