tests/cases/invalid/var-text-parameterized-run-command/example.mld
/exe @codecat(dir) = run @dir
